resolved issues w/ text overflowing container issues

--- a/SCSS/_main-content.scss
+++ b/SCSS/_main-content.scss
@@ -43,7 +43,7 @@
     .figcaption-title {
       font-family: "Fraunces", serif;
       font-weight: 800;
-      font-size: 2.5rem;
+      font-size: 2rem;
     }
   }
   #graphic-design {
@@ -58,7 +58,7 @@
   .testimonials-header {
     color: hsl(232, 10%, 55%);
     letter-spacing: 0.5rem;
-    font-size: 2rem;
+    font-size: 1rem;
   }
 
   .testaments {
